created module 4 notes and updated module 4 calcs

--- a/investments_notes/Investments_allCalcs.ipynb
+++ b/investments_notes/Investments_allCalcs.ipynb
@@ -1094,6 +1094,34 @@
     "    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module 4\n",
+    "\n",
+    "### Risk Premiums\n",
+    "\n",
+    "* Solve for the two factor risk premiums\n",
+    "* Suppose there are two independent economic factors, F1 and F2. The risk-free rate is 3%. All stocks have independent firm-specific components. Portfolio C and D are both well diversified and fairly priced, with these inputs:\n",
+    "\n",
+    "| Portfolio | Beta on $F_{1}$ | Beta on $F_{2}$ | Expected Return |\n",
+    "|------------|-------------|-------------|-------------|\n",
+    "| C | 2 | -1.6 | 24% |\n",
+    "| D | 1 | 2.4 | 19% |\n",
+    "\n",
+    "* With two risky assets, we know the expected portfolio return are given by the following equations based on multi-factor model:\n",
+    "\n",
+    "    - $.24 = .03 + 2(E(r_{1}) - r_{f}) - 1.6(E(r_{2}) - r_{f})$\n",
+    "    - $.19 = .03 + 1(E(r_{1}) - r_{f}) + 2.4(E(r_{2}) - r_{f})$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
